--- a/HierarchyExamples/packages.config
+++ b/HierarchyExamples/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ConsoleMenu-choice" version="1.0.2" targetFramework="net472" />
+  <package id="ConsoleTableExt" version="2.0.2" targetFramework="net472" />
   <package id="EasyConsole" version="1.1.0" targetFramework="net472" />
 </packages>
